Fix bug affecting jumpiness of 'tell me another' button

--- a/assets/style.css
+++ b/assets/style.css
@@ -63,6 +63,7 @@ body {
     margin: 0 0 3% 0;
     background-color: var(--tertiary-color);
     border-radius: 4px; 
+    min-height: 135px;
 }
 
 .tale-intro p {
